--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,3 +1,11 @@
 .page {
     background-color: #2A2C2F;
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
 }
