--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,17 +1,13 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 16px 16px 0;
+    padding-top: 16px;
+    width: 90vw;
+    border: 1px solid red;
 }
 
-@media screen and (min-width: 768px) {
-    .header{
-        padding: 28px 24px 0;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .header{
-        padding: 28px 48px 0;
+@media screen and (min-width: 1280px) {
+    .header {
+        max-width: 1184px;
     }
 }
