--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
-    margin-top: 8px;
-    margin-left: 16px;
+    margin: 8px auto 0;
+    max-width: 90vw;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -9,16 +9,4 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
     color: #FFFFFF;
-}
-
-@media screen and (min-width: 768px) {
-    .lead__caption {
-        margin-left: 24px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .lead__caption {
-        margin-left: 0;
-    }
 }
