--- a/pages/index.css
+++ b/pages/index.css
@@ -12,3 +12,13 @@
 @import url(../blocks/lead/__image-wrap/lead__image-wrap.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__article/intro__article.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-unit/intro__list-unit.css);
+@import url(../blocks/photos/photos.css);
+@import url(../blocks/photos/__list/photos__list.css);
+@import url(../blocks/photos/__item/photos__item.css);
+@import url(../blocks/photos/__image/photos__image.css);
