--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,7 @@
 .intro__text {
     margin: 0;
     margin-top: 40px;
+    max-width: 690px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
