--- a/blocks/lead/__image-wrap/lead__image-wrap.css
+++ b/blocks/lead/__image-wrap/lead__image-wrap.css
@@ -1,10 +1,11 @@
 .lead__image-wrap {
    margin: 0 auto;
-   max-width: 928px;
+   max-width: 100vw;
 }
 
-@media screen and (min-width: 1280px) {
-    .lead__image-wrap {
-        max-width: 984px;
-     }
+@media screen and (min-width: 1024px) {
+   .lead__image-wrap {
+       max-width: 90vw;
+       
+   }
 }
