--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,10 @@
 .lead {
     padding-top: 48px;
+    max-width: 928px;
+}
+
+@media screen and (min-width: 1024px) {
+    .lead {
+        max-width: 984px;
+    }
 }
