--- a/pages/index.css
+++ b/pages/index.css
@@ -1,17 +1,21 @@
 @import url(../vendors/normalize.css);
 @import url(../fonts/InterWeb/inter.css);
 @import url(../blocks/root/root.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-list/header__lang-list.css);
 @import url(../blocks/header/__lang-item/header__lang-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/accent/accent.css);
+
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image-wrap/lead__image-wrap.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__article/intro__article.css);
 @import url(../blocks/intro/__title/intro__title.css);
@@ -22,3 +26,15 @@
 @import url(../blocks/photos/__list/photos__list.css);
 @import url(../blocks/photos/__item/photos__item.css);
 @import url(../blocks/photos/__image/photos__image.css);
+
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__list/places__list.css);
+@import url(../blocks/places/__item/places__item.css);
+
+@import url(../blocks/location/location.css);
+@import url(../blocks/location/__title/location__title.css);
+@import url(../blocks/location/__wrap-link/location__wrap-link.css);
+@import url(../blocks/location/__url-link/location__url-link.css);
+@import url(../blocks/location/__link/location__link.css);
+@import url(../blocks/location/__image/location__image.css);
+@import url(../blocks/location/__text/location__text.css);
