--- a/blocks/intro/__article/intro__article.css
+++ b/blocks/intro/__article/intro__article.css
@@ -2,3 +2,9 @@
     margin: 0 auto;
     width: 90vw;
     } 
+
+@media screen and (min-width: 1024px) {
+    .intro__article {
+        max-width: 100%;
+    }
+}
