--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,9 @@
 @import url(../blocks/header/__lang-item/header__lang-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/accent/accent.css);
+@import url(../blocks/fading/fading.css);
 
+@import url(../blocks/content/content.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
@@ -38,3 +40,10 @@
 @import url(../blocks/location/__link/location__link.css);
 @import url(../blocks/location/__image/location__image.css);
 @import url(../blocks/location/__text/location__text.css);
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__wrap-text/cover__wrap-text.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__text/cover_text.css);
+@import url(../blocks/cover/__image/cover__image.css);
