--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,5 +1,5 @@
 .cover__link {
     display: block;
-    text-decoration: none;
-    position: relative;
+    text-decoration: none; 
+    opacity: .8;  
 }
