--- a/blocks/cover/__text/cover_text.css
+++ b/blocks/cover/__text/cover_text.css
@@ -1,6 +1,6 @@
 .cover__text {
-    margin: 0;
-    max-width: 90%;
+    margin: 0 auto;
+    max-width: 288px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -8,4 +8,12 @@
     line-height: 1.14;
     text-align: center;
     color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+    .cover__text {
+        max-width: 360px;
+        font-size: 18px;
+        line-height: 1.2;
+    }
 }
