--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,7 @@
 .cover__title {
-    margin: 0;
+    margin: 0 auto;
     margin-bottom: 16px;
-    max-width: 67%;
+    max-width: 250px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
@@ -9,4 +9,12 @@
     line-height: 1.1;
     text-align: center;
     color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+    .cover__title {
+        max-width: 560px;
+        font-size: 72px;
+        line-height: 1.1;
+    }
 }
