--- a/blocks/cover/__wrap-text/cover__wrap-text.css
+++ b/blocks/cover/__wrap-text/cover__wrap-text.css
@@ -1,6 +1,14 @@
 .cover__wrap-text {
-    position: absolute;
-    top: calc(50% / 2);
-    left: 0;
-    
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 288px;
+    z-index: 1; 
+}
+
+@media screen and (min-width: 768px) {
+    .cover__wrap-text {
+        min-width: 560px;
+    }
 }
