--- a/pages/index.css
+++ b/pages/index.css
@@ -43,7 +43,15 @@
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__wrap-content/cover__wrap-content.css);
 @import url(../blocks/cover/__wrap-text/cover__wrap-text.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__text/cover_text.css);
 @import url(../blocks/cover/__image/cover__image.css);
+@import url(../blocks/cover/__link/__link_hover_on/cover__link_hover_on.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__list/footer__list.css);
+@import url(../blocks/footer/__item/footer__item.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
