--- a/blocks/cover/__link/__link_hover_on/cover__link_hover_on.css
+++ b/blocks/cover/__link/__link_hover_on/cover__link_hover_on.css
@@ -1,7 +1,7 @@
-.cover__link_hover_on {
+/* .cover__link_hover_on {
     transition: opacity 250ms ease-in;
 }
 
 .cover__link_hover_on:hover {
     opacity: .3;
-}
+} */
