--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,19 @@
 .footer {
-    width: 90vw;
-    padding-bottom: 24px;
-    max-width: 1184px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 24px;     
 }
 
 @media screen and (min-width: 768px) {
     .footer {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .footer {
+        padding-left: 48px;
+        padding-right: 48px;
     }
 }
