--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,7 +3,14 @@
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 1.2;
+    font-size: 18px;
+    line-height: 1.1;
     color: #FFFFFF; 
+}
+
+@media screen and (min-width: 768px) {
+    .header__lang-link {
+        font-size: 24px;
+        line-height: 1.2;
+    }
 }
