--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,20 @@
 .header {
-    display: flex;
-    justify-content: space-between;
     padding-top: 16px;
-    width: 90vw;
-    max-width: 1184px;
-    border: 1px solid red;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-/* @media screen and (min-width: 1280px) {
+@media screen and (min-width: 768px) {
     .header {
+        padding-top: 28px;
+        padding-left: 24px;
+        padding-right: 24px;
     }
-} */
+}
+
+@media screen and (min-width: 1024px) {
+    .header {
+        padding-left: 48px;
+        padding-right: 48px;
+    }
+}
