--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,19 @@
 .intro {
     padding-top: 64px;
-    border: 1px solid red;
-    max-width: 984px;
-    
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+@media screen and (min-width: 768px) {
+    .intro {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .intro {
+        padding-left: 48px;
+        padding-right: 48px;
+    }
 }
