--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
     margin: 8px auto 0;
-    max-width: 90vw;
+    padding-left: 16px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -9,4 +9,16 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
     color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+    .lead__caption {
+        padding-left: 24px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .lead__caption {
+        padding-left: 0;
+    }
 }
