--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -1,9 +1,20 @@
 .photos {
     padding-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 @media screen and (min-width: 768px) {
     .photos {
         padding-top: 90px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .photos {
+        padding-left: 48px;
+        padding-right: 48px;
     }
 }
