--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,15 +1,21 @@
 .places {
     padding-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 @media screen and (min-width: 768px) {
     .places {
         padding-top: 88px;
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .places {
         padding-top: 92px;
+        padding-left: 48px;
+        padding-right: 48px;
     }
 }
