--- a/pages/index.css
+++ b/pages/index.css
@@ -1,17 +1,18 @@
 @import url(../vendors/normalize.css);
-@import url(../fonts/InterWeb/inter.css);
+@import url(../fonts/InterWeb/fonts.css);
 @import url(../blocks/root/root.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__wrap/header__wrap.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-list/header__lang-list.css);
 @import url(../blocks/header/__lang-item/header__lang-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/accent/accent.css);
+@import url(../blocks/header/__lang-link/_active_true.css/hesder__lang-link_active_true.css);
 @import url(../blocks/fading/fading.css);
 
-@import url(../blocks/content/content.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__wrap/lead__wrap.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image-wrap/lead__image-wrap.css);
@@ -24,6 +25,8 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-unit/intro__list-unit.css);
+@import url(../blocks/intro/__weight-normal/intro__weight-normal.css);
+
 @import url(../blocks/photos/photos.css);
 @import url(../blocks/photos/__list/photos__list.css);
 @import url(../blocks/photos/__item/photos__item.css);
@@ -38,19 +41,21 @@
 @import url(../blocks/location/__wrap-link/location__wrap-link.css);
 @import url(../blocks/location/__url-link/location__url-link.css);
 @import url(../blocks/location/__link/location__link.css);
+@import url(../blocks/location/__link/_decor_underline/location__link_decor_underline.css);
 @import url(../blocks/location/__image/location__image.css);
 @import url(../blocks/location/__text/location__text.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__wrap-content/cover__wrap-content.css);
-@import url(../blocks/cover/__wrap-text/cover__wrap-text.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__overlay/_hover_on/cover__overlay_hover_on.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__text/cover_text.css);
 @import url(../blocks/cover/__image/cover__image.css);
-@import url(../blocks/cover/__link/__link_hover_on/cover__link_hover_on.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__wrap/footer__wrap.css);
 @import url(../blocks/footer/__list/footer__list.css);
 @import url(../blocks/footer/__item/footer__item.css);
 @import url(../blocks/footer/__link/footer__link.css);
