--- a/blocks/intro/__list-unit/intro__list-unit.css
+++ b/blocks/intro/__list-unit/intro__list-unit.css
@@ -1,9 +1,9 @@
 .intro__list-unit {
     margin: 0;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
-    line-height: 1.5;
+    line-height: 1.50;
     color: #FFFFFF;
 }
