--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,11 +1,12 @@
 .cover__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     min-height: 100%;
-    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background: rgba(42, 44, 47, .3);
+}
+
+.cover__overlay:hover {
+    background: rgba(42, 44, 47, .8);
 }
