--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,7 +1,7 @@
 .cover__text {
     margin: 0 auto;
     max-width: 288px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -14,6 +14,6 @@
     .cover__text {
         max-width: 360px;
         font-size: 18px;
-        line-height: 1.2;
+        line-height: 1.22;
     }
 }
