--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,11 +2,11 @@
     margin: 0 auto;
     margin-bottom: 16px;
     max-width: 250px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 32px;
-    line-height: 1.1;
+    line-height: 1.09;
     text-align: center;
     color: #FFFFFF;
 }
@@ -15,6 +15,6 @@
     .cover__title {
         max-width: 560px;
         font-size: 72px;
-        line-height: 1.1;
+        line-height: 1.06;
     }
 }
