--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,7 @@
 .footer__copyright {
     margin: 0;
     margin-top: 48px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -12,5 +12,6 @@
 @media screen and (min-width: 768px) {
     .footer__copyright {
         margin-top: 0;
+        line-height: 1.14;
     }
 }
