--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link {
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -11,6 +11,6 @@
 @media screen and (min-width: 768px) {
     .footer__link {
         font-size: 16px;
-        line-height: 1.1;
+        line-height: 1.12;
     }
 }
