--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,16 +1,16 @@
 .header__lang-link {
     text-decoration: none;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style:  normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 1.1;
+    line-height: 1.11;
     color: #FFFFFF; 
 }
 
 @media screen and (min-width: 768px) {
     .header__lang-link {
         font-size: 24px;
-        line-height: 1.2;
+        line-height: 1.17;
     }
 }
