--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,16 @@
 .intro__text {
     margin: 0;
     margin-top: 40px;
-    max-width: 690px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.63;
     color: #FFFFFF;
+}
+
+@media screen and (min-width: 1024px) {
+    .intro__text {
+        max-width: 690px;
+    }
 }
