--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,15 +1,16 @@
 .intro__title {
     margin: 0;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 32px;
-    line-height: 1.1;
+    line-height: 1.09;
     color: #FFFFFF;
 }
 
 @media screen and (min-width: 768px) {
     .intro__title {
         font-size: 54px;
+        line-height: 1.07;
     }
 }
