--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,6 +6,7 @@
 
 @media screen and (min-width: 768px) {
     .intro {
+        padding-top: 88px;
         padding-left: 24px;
         padding-right: 24px;
     }
@@ -13,6 +14,7 @@
 
 @media screen and (min-width: 1024px) {
     .intro {
+        padding-top: 92px;
         padding-left: 48px;
         padding-right: 48px;
     }
