--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,11 @@
 .lead__subtitle {
     margin: 16px auto 40px;
     max-width: 288px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.25;
     text-align: center;
     color: #FFFFFF;
 }
@@ -15,7 +15,7 @@
         max-width: 640px;
         margin: 32px auto 56px;
         font-size: 30px;
-        line-height: 1.2;
+        line-height: 1.20;
     }
 }
 
