--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,11 @@
 .lead__title {
     margin: 0 auto;
     max-width: 288px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 40px;
-    line-height: 1.1;
+    line-height: 1.10;
     text-align: center;
     color: #FFFFFF;
 }
@@ -14,5 +14,6 @@
     .lead__title {
         max-width: 720px;
         font-size: 96px;
+        line-height: 1.04;
     }
 }
