--- a/blocks/location/__link/location__link.css
+++ b/blocks/location/__link/location__link.css
@@ -1,9 +1,21 @@
 .location__link {
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 1.22;
     text-decoration: none;
     color: #FFFFFF;
+    position: relative;
+}
+
+.location__link::after {
+    content: "";
+    position: absolute;
+    bottom: 1;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #FFFFFF;
 }
