--- a/blocks/location/__wrap-link/location__wrap-link.css
+++ b/blocks/location/__wrap-link/location__wrap-link.css
@@ -1,5 +1,15 @@
 .location__wrap-link {
     margin: 0;
     margin-bottom: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
     align-self: end;
+}
+
+@media screen and (min-width: 768px) {
+    .location__wrap-link {
+        margin-bottom: 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
